content + start styling
problem with cookies

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,24 @@
   font-weight: normal;
   font-style: normal;
   font-display: block; }
+@font-face {
+  font-family: 'Tahoma';
+  src: url("Tahoma.eot");
+  src: local("Tahoma"), url("../fonts/Tahoma/Tahoma.eot?#iefix") format("embedded-opentype"), url("../fonts/Tahoma/Tahoma.woff") format("woff"), url("../fonts/Tahoma/Tahoma.woff2") format("woff2"), url("../fonts/Tahoma/Tahoma.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Tahoma';
+  src: url("../fonts/Tahoma/Tahoma-Bold.eot");
+  src: local("../fonts/Tahoma/Tahoma Bold"), local("Tahoma-Bold"), url("../fonts/Tahoma/Tahoma-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Tahoma/Tahoma-Bold.woff") format("woff"), url("../fonts/Tahoma/Tahoma-Bold.woff2") format("woff2"), url("../fonts/Tahoma/Tahoma-Bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
+* {
+  font-family: Tahoma, sans-serif;
+  font-size: 16px;
+  line-height: 150%;
+  color: #232323; }
+
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
@@ -34,24 +52,6 @@
 .icon-youtube:before {
   content: "\ea9d"; }
 
-@font-face {
-  font-family: 'Tahoma';
-  src: url("Tahoma.eot");
-  src: local("Tahoma"), url("../fonts/Tahoma/Tahoma.eot?#iefix") format("embedded-opentype"), url("../fonts/Tahoma/Tahoma.woff") format("woff"), url("../fonts/Tahoma/Tahoma.woff2") format("woff2"), url("../fonts/Tahoma/Tahoma.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'Tahoma';
-  src: url("../fonts/Tahoma/Tahoma-Bold.eot");
-  src: local("../fonts/Tahoma/Tahoma Bold"), local("Tahoma-Bold"), url("../fonts/Tahoma/Tahoma-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Tahoma/Tahoma-Bold.woff") format("woff"), url("../fonts/Tahoma/Tahoma-Bold.woff2") format("woff2"), url("../fonts/Tahoma/Tahoma-Bold.ttf") format("truetype");
-  font-weight: bold;
-  font-style: normal; }
-* {
-  font-family: Tahoma, sans-serif;
-  font-size: 16px;
-  line-height: 150%;
-  color: #232323; }
-
 html,
 body {
   height: 100%;
@@ -67,7 +67,17 @@ a, button, a *, button * {
   min-height: 100%;
   max-width: 1270px;
   overflow: hidden;
-  margin: 0 auto; }
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .container {
   padding: 0 20px; }
@@ -76,7 +86,88 @@ a, button, a *, button * {
     display: -ms-flexbox;
     display: flex; }
 
+.row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
+
+.h1 {
+  color: #ffffff; }
+
+.peridot {
+  color: #93ea20; }
+
+.popup {
+  display: none; }
+
+.top {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%; }
+  .top__container {
+    max-width: 1230px;
+    overflow: hidden;
+    margin: 0 auto; }
+  .top__column:first-child {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 63%;
+            flex: 1 1 63%; }
+  .top__column:nth-child(2) {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 37%;
+            flex: 1 1 37%; }
+
+.flag {
+  color: #93ea20; }
+
+.date {
+  color: #ffffff; }
+
+.form__title {
+  color: #ffffff; }
+.form__input {
+  color: #999999; }
+.form__agreement {
+  color: #ffffff; }
+
+.checkbox__label {
+  color: #ffffff; }
+
+.comment {
+  color: #999999; }
+
+.expert {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 20%;
+          flex: 0 1 20%; }
+  .expert__portrait {
+    border-radius: 30px;
+    overflow: hidden;
+    width: 164px;
+    height: 164px; }
+  .expert__position {
+    color: #999999; }
+
+.portrait__img {
+  display: block; }
+
 .footer {
   padding: 60px 0; }
+
+.policy {
+  color: #999999; }
+
+.iconbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none; }
+
+.socicon__link {
+  color: #999999;
+  font-size: 17px; }
 
 /*# sourceMappingURL=style.css.map */
