fullscreen block: sizes upgrade & bg

--- a/css/style.css
+++ b/css/style.css
@@ -104,10 +104,21 @@ a, button, a *, button * {
   display: none; }
 
 .top {
-  min-height: 350px; }
+  min-height: 350px;
+  background: #004550;
+  position: relative; }
+  .top:before {
+    content: '';
+    width: 42%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.2); }
   .top__container {
     max-width: 1230px;
-    overflow: hidden; }
+    overflow: hidden;
+    margin: 0 auto; }
   .top__column:first-child {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 63%;
