no-fullscreen top
footer, experts

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -97,7 +97,10 @@
   strong {
     font-weight: bolder;
   }
-  
+  p, h1, h2, h3, h4, h5, h6, ul, li {
+    margin: 0;
+  }
+
   /**
    * 1. Correct the inheritance and scaling of font size in all browsers.
    * 2. Correct the odd `em` font sizing in all browsers.
